objects/Margin_Ratchet_Conditions__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>Condition__r.Active__c</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <referenceTo>Condition__c</referenceTo>
        <relationshipLabel>Linked Margin Ratchets</relationshipLabel>
        <relationshipName>Margin_Ratchet_Conditions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Margin_Ratchet__c</fullName>
        <label>Margin Ratchet</label>
        <referenceTo>Margin_Ratchet__c</referenceTo>
        <relationshipLabel>Financial Covenants</relationshipLabel>
        <relationshipName>Margin_Ratchet_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Margin Ratchet Condition</label>
    <nameField>
        <displayFormat>MRC-{0}</displayFormat>
        <label>Margin Condition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Margin Ratchet Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>